--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stablecoins.press | Premier Daily Stablecoin News</title>
-    <meta name="description" content="stablecoins.press, premier daily stablecoins news" />
-    <meta name="keywords" content="stablecoins, usdc, news, genius act, stablecoin, tether, circle, USDT" />
-    <meta name="author" content="stablecoins.press" />
+    <title>NEWSSITE | Premier Daily Stablecoin News</title>
+    <meta name="description" content="NEWSSITE, news description" />
+        <!-- changehere your content -->
+    <meta name="keywords" content="news, news1" />
+        <!-- changehere your content -->
+    <meta name="author" content="NEWSSITE" />  
+        <!-- changehere your content -->
     <meta property="og:image" content="/lovable-uploads/9db227a7-1560-4567-9f71-0eedd2d5e8f0.png" />
-    <meta property="og:title" content="stablecoins.press | Premier Daily Stablecoin News" />
-    <meta property="og:description" content="The premier source for daily stablecoin news and updates" />
+        <!-- changehere your content -->
+    <meta property="og:title" content="NEWSSITE | Description here" />
+    <!-- changehere your content -->
+    <meta property="og:description" content="Your newssite changehere description" />
+        <!-- changehere your content -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jersey+System:wght@300;400;500;600;700&display=swap">
     <link rel="icon" type="image/png" href="/lovable-uploads/603d52e2-2c07-43a9-80a0-67ce5195aa2b.png">
+        <!-- changehere your content with favicon -->
   </head>
-
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
